[tool.poetry]
name = "running-1.10.0"
version = "0.1.0"
description = ""
authors = ["Tom Eastman <tom@eastman.nz>"]

[tool.poetry.dependencies]
python = "^3.9"
opentelemetry-exporter-otlp-proto-grpc = "1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
